k8s/k8s_descriptor-poz-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vignette
  name: vignette
  namespace: dev
spec:
  ports:
  - port: 80
    name: main
    protocol: TCP
    targetPort: 8080
  selector:
    app: vignette
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vignette
    stage: deployed
  name: vignette
  namespace: dev
spec:
  selector:
    matchLabels:
      app: vignette
      stage: deployed
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  progressDeadlineSeconds: 120
  template:
    metadata:
      labels:
        app: vignette
        stage: deployed
    spec:
      serviceAccountName: k8s-pod
      volumes:
      - name: secrets-dir
        emptyDir:
          medium: Memory
      - name: tmp-dir
        emptyDir: {}
      containers:
      - name: vignette-tmp-cleaner
        image: alpine:3.8
        volumeMounts:
        - name: tmp-dir
          mountPath: /tmp-vignette
        command:  # remove files older than 10 minutes
         - /bin/sh
         - -c
         - "while true; do find '/tmp-vignette' -type f -mmin +10 -exec /bin/rm {} \\; 2> /dev/null; sleep 300; done"
      - name: vignette
        image: ${IMAGE_PATH}
        # required for vault secrets to load
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "3"]
        volumeMounts:
        - name: secrets-dir
          readOnly: true
          mountPath: /var/lib/secrets
        - name: tmp-dir
          mountPath: /tmp-vignette
        resources:
          limits:
            memory: 1024Mi
          requests:
            cpu: 0.9
            memory: 900Mi
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
  labels:
    app: vignette
  name: vignette
  namespace: dev
spec:
  rules:
  - host: images.wikia-dev.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: vignette
          servicePort: 80
  - host: static.wikia-dev.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: vignette
          servicePort: 80
  - host: vignette.wikia-dev.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: vignette
          servicePort: 80
  - host: poz-dev.k8s.wikia.net
    http:
      paths:
      - path: /vignette
        backend:
          serviceName: vignette
          servicePort: 80
  - host: dev.poz-dev.k8s.wikia.net
    http:
      paths:
      - path: /vignette
        backend:
          serviceName: vignette
          servicePort: 80
